# ugc_sprint_2

./: .gitignore  README.md  docker-compose.db.yaml  docker-compose.elk.yaml  docker-compose.main.yaml  docker-compose.tests.yaml  docker-compose.yaml  env_example
.github/workflows/: python-package.yml
AuthAPI/: README.md  cli_create_super_user.py  dockerfile  main.py  pyproject.toml  requirements.txt
AuthAPI/alembic/: env.py
AuthAPI/alembic/versions/: 00d695e6331f_initial.py
AuthAPI/api/v1/: auth.py  role.py  socials.py  user_history.py
AuthAPI/core/: config.py  handlers.py  hasher.py  logger.py  oauth2.py  params.py
AuthAPI/db/: postgres.py  redis.py
AuthAPI/middleware/: main.py  request_log.py
AuthAPI/models/: choices.py  models.py
AuthAPI/schemas/: __init__.py  auth.py  user_history.py
AuthAPI/services/: __init__.py  auth.py  crud.py  socials.py  user_history.py
AuthAPI/storages/: __init__.py  role.py  social_account.py  user.py  user_history.py  user_role.py
AuthAPI/utils/: constraint.py  jaeger.py
Nginx/: auth_api.conf  nginx.conf  reviews_api.conf
ReviewsAPI/: dockerfile  main.py  pyproject.toml
ReviewsAPI/api/v1/: __init__.py  film_mark.py  review.py  reviews.py
ReviewsAPI/core/: config.py  handlers.py
ReviewsAPI/db/: init_db.py  mongo.py  redis.py
ReviewsAPI/exceptions/: __init__.py
ReviewsAPI/models/: __init__.py  review.py
ReviewsAPI/schemas/: auth.py  author.py  review.py
ReviewsAPI/services/: film_review.py  mark_review.py  review.py
ReviewsAPI/storages/: __init__.py  mark_review.py  review.py  review_film.py
ReviewsAPI/utils/: jaeger.py
TestDataBase/: Mongo vs ClicHouse vs Postgres.ipynb  Mongo vs ClickHouse vs Postgres.ipynb  README.md  docker-compose.yml  requirements.txt
Tests/: README.md  dockerfile  entrypoint.sh  pyproject.toml
Tests/functional/: __init__.py  conftest.py  requirements.txt  settings.py
Tests/functional/fixtures/: fixture_shared.py
Tests/functional/src/: review_mark.py  test_reviews.py
filebeat/: auth_dockerfile  filebeat.auth.yaml  filebeat.nginx.yaml  filebeat.review.yaml  filebeat.yaml  nginx_dockerfile  review_dockerfile
logstash/: logstash.conf
