[tool.poetry]
name = "auth api"
version = "0.1.0"
description = "Auth api"
authors = ["Nozir Tukhramurodov <nozir9407@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
annotated-types = "^0.6.0"
anyio = "^4.2.0"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
click = "^8.1.7"
fastapi = "^0.100.1"
greenlet = "^3.0.3"
h11 = "^0.14.0"
idna = "^3.6"
Mako = "^1.3.0"
MarkupSafe = "^2.1.3"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pydantic-core = "^2.14.6"
python-dotenv = "^1.0.0"
sniffio = "^1.3.0"
SQLAlchemy = "^2.0.25"
starlette = "^0.27.0"
typing-extensions = "^4.9.0"
uvicorn = "^0.24.0.post1"
async-fastapi-jwt-auth = "^0.6.1"
gunicorn = "^20.1.0"
redis = "^5.0.1"
orjson = "^3.9.10"
typer = "^0.9.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pytest-asyncio = "^0.23.4"
opentelemetry-api = "^1.17.0"
opentelemetry-sdk = "^1.17.0"
opentelemetry-instrumentation-fastapi = "^0.38b0"
opentelemetry-exporter-jaeger = "^1.17.0"
python-jose = "^3.3.0"
itsdangerous = "^2.0.1"
Authlib = "^1.3.0"
requests = "^2.31.0"
faker = "^22.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.1.17"
flake8-isort = "^6.1.1"
flake8-bandit = "^4.1.1"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
flake8-print = "^5.0.0"
flake8-commas = "^2.1.0"
flake8-broken-line = "^1.0.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
faker = "^22.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
