[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Nozir Tukhtamurodov <nozir9407@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.8.6"
pydantic-settings= "^2.1.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.1"
faker = "^22.5.1"
redis = "^4.3.4"
backoff = "^2.2.1"
asyncpg = "^0.29.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.1.17"
flake8-isort = "^6.1.1"
flake8-bandit = "^4.1.1"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
flake8-print = "^5.0.0"
flake8-commas = "^2.1.0"
flake8-broken-line = "^1.0.0"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
faker = "^22.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
